--- a/.github/workflows/build-main.yml
+++ b/.github/workflows/build-main.yml
@@ -13,5 +13,5 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Install deps
+      - name: Install Deps
         run: npm install
