--- a/.github/workflows/build-main.yml
+++ b/.github/workflows/build-main.yml
@@ -34,7 +34,7 @@ jobs:
           target: ~/htdocs/drap-v.swit.vn.ua
           strip_components: 1
 
-      - name: Extract files
+      - name: Extract Files
         uses: appleboy/ssh-action@v0.1.3
         with:
           host: ${{ secrets.HOST }}
